# Difference-calculator

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: linter-check.yml
gendiff/: __init__.py  cli.py  diff.py  gendiff.py  main.py  parsing.py
gendiff/format/: formatters.py  json.py  parsing.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: test_answer_json.json
tests/test_example/: .file1.yaml.swp
